--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "react-stars": "^2.2.5",
     "styled-components": "^6.1.0",
     "yup": "^1.3.2"
   },
